# deteff

./: .gitignore  .gitmodules  CMakeLists.txt  PadMap.cpp  PadMap.h  SQLWriter.cpp  SQLWriter.h  SQLiteWrapper.cpp  SQLiteWrapper.h  SQLiteWrapper.tpp  deteff.cpp  deteff.yml  deteff_job.qsub.sh  hpcc-deteff.yml  make_params.py  parsers.cpp  parsers.h  setup.py  test_sqlwrapper.cpp  test_sqlwriter.cpp
deteff/: __init__.py  deteff.py  trigger.pyx
notebooks/: test.ipynb
src/: SQLiteWrapper.cpp  deteff.cpp  parsers.cpp
test/: test.py  test_sqlwrapper.cpp
